add download link to order page

--- a/view/frontend/templates/order/items/renderer/image.phtml
+++ b/view/frontend/templates/order/items/renderer/image.phtml
@@ -1,95 +1,111 @@
 <?php
 /**
- * Copyright © Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
+ * Copied from magento/module-downloadable/view/frontend/templates/sales/order/items/renderer/downloadable.phtml
+ * With a slight change to allow
+ *
  */
+// phpcs:disable Generic.Files.LineLength
+use Magento\Downloadable\Model\Link\Purchased\Item;
 
-/**
- * @var \Magento\Sales\Block\Order\Item\Renderer\DefaultRenderer $block
- * @var \Magento\Framework\Locale\LocaleFormatter $localeFormatter
- */
-$_item = $block->getItem();
+/** @var $block \DevStone\ImageProducts\Block\Sales\Order\Item\Renderer\Image */
+/** @var \Magento\Framework\Locale\LocaleFormatter $localeFormatter */
 ?>
-<tr id="order-item-row-<?= (int) $_item->getId() ?>">
-	<td class="col name" data-th="<?= $block->escapeHtml(__('Product Name')) ?>">
-		<strong class="product name product-item-name"><?= $block->escapeHtml($_item->getName()) ?></strong>
-		<?php if ($_options = $block->getItemOptions()): ?>
-			<dl class="item-options">
-				<?php foreach ($_options as $_option): ?>
-					<dt><?= $block->escapeHtml($_option['label']) ?></dt>
-					<?php if (!$block->getPrintStatus()): ?>
-						<?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
-						<dd<?= (isset($_formatedOptionValue['full_view']) ? ' class="tooltip wrapper"' : '') ?>>
-							<?= $block->escapeHtml($_formatedOptionValue['value'], ['a']) ?>
-							<?php if (isset($_formatedOptionValue['full_view'])): ?>
-								<div class="tooltip content">
-									<dl class="item options">
-										<dt><?= $block->escapeHtml($_option['label']) ?></dt>
-										<dd><?= $block->escapeHtml($_formatedOptionValue['full_view'], ['br','strong','b','i',]) ?></dd>
-									</dl>
-								</div>
-							<?php endif; ?>
-						</dd>
-					<?php else: ?>
-						<?php $optionValue = isset($_option['print_value']) ? $_option['print_value'] : $_option['value'] ?>
-						<dd><?= $block->escapeHtml($optionValue) ?></dd>
-					<?php endif; ?>
-				<?php endforeach; ?>
-			</dl>
-		<?php endif; ?>
-		<?php $addtInfoBlock = $block->getProductAdditionalInformationBlock(); ?>
-		<?php if ($addtInfoBlock): ?>
-			<?= $addtInfoBlock->setItem($_item)->toHtml() ?>
-		<?php endif; ?>
-		<?= $block->escapeHtml($_item->getDescription()) ?>
-	</td>
-	<td class="col sku" data-th="<?= $block->escapeHtml(__('SKU')) ?>">
-		<?= /* @noEscape */ $block->prepareSku($block->getSku()) ?>
-	</td>
-	<td class="col price" data-th="<?= $block->escapeHtml(__('Price')) ?>">
-		<?= $block->getItemPriceHtml() ?>
-	</td>
-	<td class="col qty" data-th="<?= $block->escapeHtml(__('Qty')) ?>">
-		<ul class="items-qty">
-			<?php if ($block->getItem()->getQtyOrdered() > 0): ?>
-				<li class="item">
-					<span class="title"><?= $block->escapeHtml(__('Ordered')) ?></span>
-					<span class="content">
-                    <?= $block->escapeHtml($localeFormatter->formatNumber((float) $block->getItem()->getQtyOrdered()))?>
-                </span>
-				</li>
-			<?php endif; ?>
-			<?php if ($block->getItem()->getQtyShipped() > 0): ?>
-				<li class="item">
-					<span class="title"><?= $block->escapeHtml(__('Shipped')) ?></span>
-					<span class="content">
-                    <?= $block->escapeHtml($localeFormatter->formatNumber((float) $block->getItem()->getQtyShipped()))?>
-                </span>
-				</li>
-			<?php endif; ?>
-			<?php if ($block->getItem()->getQtyCanceled() > 0): ?>
-				<li class="item">
-					<span class="title"><?= $block->escapeHtml(__('Canceled')) ?></span>
-					<span class="content">
-                    <?= $block->escapeHtml(
-	                    $localeFormatter->formatNumber((float) $block->getItem()->getQtyCanceled())
-                    )?>
-                </span>
-				</li>
-			<?php endif; ?>
-			<?php if ($block->getItem()->getQtyRefunded() > 0): ?>
-				<li class="item">
-					<span class="title"><?= $block->escapeHtml(__('Refunded')) ?></span>
-					<span class="content">
-                    <?= $block->escapeHtml(
-	                    $localeFormatter->formatNumber((float) $block->getItem()->getQtyRefunded())
-                    )?>
-                </span>
-				</li>
-			<?php endif; ?>
-		</ul>
-	</td>
-	<td class="col subtotal" data-th="<?= $block->escapeHtml(__('Subtotal')) ?>">
-		<?= $block->getItemRowTotalHtml() ?>
-	</td>
+<?php $_item = $block->getItem() ?>
+<tr id="order-item-row-<?= $block->escapeHtmlAttr($_item->getId()) ?>">
+    <td class="col name" data-th="<?= $block->escapeHtmlAttr(__('Product Name')) ?>">
+        <strong class="product name product-item-name"><?= $block->escapeHtml($_item->getName()) ?></strong>
+	    <?php /* downloadable */ ?>
+	    <?php if ($links = $block->getLinks()):?>
+            <dl class="item-options links">
+                <dt><?= $block->escapeHtml($block->getLinksTitle()) ?></dt>
+			    <?php foreach ($links->getPurchasedItems() as $link):?>
+                    <dd>
+					    <?php if ($link->getStatus() == Item::LINK_STATUS_AVAILABLE): ?>
+                            <a href="<?= $block->escapeUrl($block->getDownloadUrl($link)) ?>"
+                               id="download_<?= /* @noEscape */ $_item->getId() ?>"
+                               title="<?= $block->escapeHtmlAttr(__('Start Download')) ?>"
+                               class="action download">
+							    <?= $block->escapeHtml(__('Download Image')) ?>
+                            </a>
+						    <?php if ($block->getIsOpenInNewWindow()): ?>
+							    <?= /* @noEscape */ $secureRenderer->renderEventListenerAsTag(
+								    'onclick',
+								    "this.target='_blank'",
+								    'a#download_' . $_item->getId()
+							    ) ?>
+						    <?php endif; ?>
+					    <?php endif; ?>
+                    </dd>
+			    <?php endforeach; ?>
+            </dl>
+	    <?php endif; ?>
+	    <?php /* EOF downloadable */ ?>
+        <?php if ($_options = $block->getItemOptions()):?>
+            <dl class="item-options links">
+                <?php foreach ($_options as $_option):?>
+                    <dt><?= $block->escapeHtml($_option['label']) ?></dt>
+                    <?php if (!$block->getPrintStatus()):?>
+                        <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
+                        <dd<?php if (isset($_formatedOptionValue['full_view'])):?> class="tooltip wrapper"<?php endif; ?>>
+                            <?= /* @noEscape */ $_formatedOptionValue['value'] ?>
+                            <?php if (isset($_formatedOptionValue['full_view'])):?>
+                                <div class="tooltip content">
+                                    <dl class="item options">
+                                        <dt><?= $block->escapeHtml($_option['label']) ?></dt>
+                                        <dd><?= /* @noEscape */ $_formatedOptionValue['full_view'] ?></dd>
+                                    </dl>
+                                </div>
+                            <?php endif; ?>
+                        </dd>
+                    <?php else:?>
+                        <dd>
+                            <?= /* @noEscape */ nl2br((isset($_option['print_value']) ? $_option['print_value'] : $_option['value'])) ?>
+                        </dd>
+                    <?php endif; ?>
+                <?php endforeach; ?>
+            </dl>
+        <?php endif; ?>
+        <?php $addtInfoBlock = $block->getProductAdditionalInformationBlock(); ?>
+        <?php if ($addtInfoBlock):?>
+            <?= $addtInfoBlock->setItem($_item)->toHtml() ?>
+        <?php endif; ?>
+        <?= $block->escapeHtml($_item->getDescription()) ?>
+    </td>
+    <td class="col sku" data-th="<?= $block->escapeHtmlAttr(__('SKU')) ?>"><?= /* @noEscape */ $block->prepareSku($block->getSku()) ?></td>
+    <td class="col price" data-th="<?= $block->escapeHtmlAttr(__('Price')) ?>">
+        <?= $block->getItemPriceHtml() ?>
+    </td>
+    <td class="col qty" data-th="<?= $block->escapeHtmlAttr(__('Qty')) ?>">
+        <ul class="items-qty">
+            <?php if ($block->getItem()->getQtyOrdered() > 0):?>
+                <li class="item">
+                    <span class="title"><?= $block->escapeHtml(__('Ordered')) ?></span>
+                    <span class="content">
+                        <?= $block->escapeHtml($localeFormatter->formatNumber((float)$block->getItem()->getQtyOrdered() * 1)) ?>
+                    </span>
+                </li>
+            <?php endif; ?>
+            <?php if ($block->getItem()->getQtyShipped() > 0):?>
+                <li class="item">
+                    <span class="title"><?= $block->escapeHtml(__('Shipped')) ?></span>
+                    <span class="content"><?= (float)$block->getItem()->getQtyShipped() * 1 ?></span>
+                </li>
+            <?php endif; ?>
+            <?php if ($block->getItem()->getQtyCanceled() > 0):?>
+                <li class="item">
+                    <span class="title"><?= $block->escapeHtml(__('Canceled')) ?></span>
+                    <span class="content"><?= (float)$block->getItem()->getQtyCanceled() * 1 ?></span>
+                </li>
+            <?php endif; ?>
+            <?php if ($block->getItem()->getQtyRefunded() > 0):?>
+                <li class="item">
+                    <span class="title"><?= $block->escapeHtml(__('Refunded')) ?></span>
+                    <span class="content"><?= (float)$block->getItem()->getQtyRefunded() * 1 ?></span>
+                </li>
+            <?php endif; ?>
+        </ul>
+    </td>
+    <td class="col subtotal" data-th="<?= $block->escapeHtmlAttr(__('Subtotal')) ?>">
+        <?= $block->getItemRowTotalHtml() ?>
+    </td>
 </tr>
