--- a/view/frontend/layout/checkout_onepage_success.xml
+++ b/view/frontend/layout/checkout_onepage_success.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="order.success.additional.info">
-            <block class="Magento\Downloadable\Block\Checkout\Success" name="downloadable.checkout.success" template="DevStone_ImageProducts::checkout/success.phtml"/>
+            <block class="DevStone\ImageProducts\Block\Checkout\Success" name="downloadable.checkout.success" template="DevStone_ImageProducts::checkout/success.phtml"/>
         </referenceContainer>
     </body>
 </page>
