--- a/view/frontend/templates/checkout/success.phtml
+++ b/view/frontend/templates/checkout/success.phtml
@@ -17,7 +17,7 @@ $first = true;
                 <?= $escaper->escapeHtml($link->getProductName()) ?>&nbsp;
                 <?php foreach($purchasedItems as $linkPurchasedItem) : ?>
                     <?php /** @var Magento\Downloadable\Model\Link\Purchased\Item $linkPurchasedItem */ ?>
-                    (<a href="<?= $escaper->escapeUrl(
+                    (<a class="action primary" href="<?= $escaper->escapeUrl(
                         $block->getUrl(
                             'downloadable/download/link',
                             [
@@ -33,7 +33,7 @@ $first = true;
     <?php endforeach; ?>
 <?php endif; ?>
 
-<?php if (!$first): ?>
+<?php if ( $first): ?>
     </dl>
     <?= /* @escapeNotVerified */ __('<a href="%1">Click here to see all your downloadable images</a>', $block->getDownloadableProductsUrl()) ?>
 <?php endif; ?>
